<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LeaderboardFragment"
    tools:context=".LeaderboardFragment">

    <LinearLayout
        android:id="@+id/LeaderboardLL1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/LeaderboardText"
            android:layout_width="match_parent"
...
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/LeaderboardRank1LL"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:text="1."
...
