...
    <item
        android:id="@+id/add"
        android:title="Add"
        android:icon="@drawable/ub_add"/>

    <item
        android:id="@+id/stat"
        android:title="Leaderboard"
        android:icon="@drawable/ub_stats"/>

    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ub_profile"/>
...
